# nqc

./: .cirrus.yml  .clang-format  .gitattributes  .gitignore  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile  Makefile.inc1  Makefile.libcompat  Makefile.sys.inc  ObsoleteFiles.inc  README.md  UPDATING  make.conf  src.conf
cddl/: Makefile  Makefile.inc
crypto/: README
etc/: Makefile  group  master.passwd  shells
gnu/: Makefile  Makefile.inc
include/: Makefile  _ctype.h  a.out.h  ar.h  assert.h  bitstring.h  byteswap.h  complex.h  cpio.h  ctype.h  db.h  dirent.h  dlfcn.h  elf-hints.h  elf.h  endian.h  err.h  fmtmsg.h  fnmatch.h  fstab.h  fts.h  ftw.h  getopt.h  glob.h  grp.h  gssapi.h  hesiod.h  iconv.h  ieeefp.h  ifaddrs.h  inttypes.h  iso646.h  kenv.h  langinfo.h  libgen.h  limits.h  link.h  locale.h  malloc.h  malloc_np.h  (+59 more)
kerberos5/: Makefile  Makefile.inc
lib/: Makefile  Makefile.inc
libexec/: Makefile  Makefile.inc
release/: Makefile  Makefile.azure  Makefile.ec2  Makefile.gce  Makefile.inc1  Makefile.mirrors  Makefile.vagrant  Makefile.vm  rc.local  release.sh  (+1 more)
sys/contrib/openzfs/lib/libspl/: Makefile.am
sys/contrib/openzfs/lib/libspl/include/: Makefile.am  zone.h
sys/contrib/openzfs/lib/libspl/include/os/freebsd/sys/: stat.h  vfs.h  zfs_context_os.h
sys/contrib/openzfs/lib/libspl/include/os/nqc/sys/: stat.h
sys/contrib/openzfs/lib/libspl/include/sys/: simd.h  uio.h
sys/contrib/openzfs/lib/libspl/include/sys/dktp/: fdisk.h
sys/contrib/openzfs/lib/libspl/os/freebsd/: mnttab.c
sys/contrib/openzfs/lib/libspl/os/nqc/: mnttab.c  zone.c
(+32014 files in other folders)
